// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`xstate-component-tree invoked child machines should be supported 1`] = `
Object {
  "children": Array [
    Object {
      "children": Array [
        Object {
          "children": Array [
            Object {
              "children": Array [],
              "component": "child",
              "props": false,
            },
          ],
          "id": "child-machine",
        },
      ],
      "component": "one",
      "props": false,
    },
  ],
  "id": "(machine)",
}
`;

exports[`xstate-component-tree invoked child machines should be supported in a parallel state 1`] = `
Object {
  "children": Map {
    "one" => Object {
      "children": Map {
        "child-machine" => Map {
          "child" => Object {
            "children": Map {},
            "component": "child",
            "props": false,
          },
        },
      },
      "component": "one",
      "props": false,
    },
    "two" => Object {
      "children": Map {},
      "component": "two",
      "props": false,
    },
  },
  "id": "(machine)",
}
`;

exports[`xstate-component-tree invoked child machines should ignore non-statechart children (callback) 1`] = `
Array [
  Object {
    "children": Array [
      Object {
        "children": Array [],
        "component": "one",
        "props": false,
      },
    ],
    "id": "(machine)",
  },
]
`;

exports[`xstate-component-tree invoked child machines should ignore non-statechart children (promise) 1`] = `
Array [
  Object {
    "children": Array [
      Object {
        "children": Array [],
        "component": "one",
        "props": false,
      },
    ],
    "id": "(machine)",
  },
]
`;

exports[`xstate-component-tree invoked child machines should rebuild on child transitions 1`] = `
Snapshot Diff:
Compared values have no visual difference.
`;

exports[`xstate-component-tree invoked child machines should rebuild on nested invoked machine transitions 1`] = `
Snapshot Diff:
- First value
+ Second value

@@ -21,11 +21,11 @@
    },
    Object {
      "children": Array [
        Object {
          "children": Array [],
-         "component": "grandchild1",
+         "component": "grandchild2",
          "props": false,
        },
      ],
      "id": "grandchild",
    },
`;

exports[`xstate-component-tree invoked child machines should rebuild on parent transitions 1`] = `
Snapshot Diff:
- First value
+ Second value

@@ -2,11 +2,11 @@
    "children": Array [
      Object {
        "children": Array [
          Object {
            "children": Array [],
-           "component": "oneone",
+           "component": "onetwo",
            "props": false,
          },
          Object {
            "children": Array [
              Object {
`;

exports[`xstate-component-tree invoked child machines should remove data once the invoke is halted 1`] = `
Snapshot Diff:
- First value
+ Second value

@@ -7,16 +7,6 @@
          "props": false,
        },
      ],
      "id": "(machine)",
    },
-   Object {
-     "children": Array [
-       Object {
-         "children": Array [],
-         "component": "child",
-         "props": false,
-       },
-     ],
-     "id": "child",
-   },
  ]
`;

exports[`xstate-component-tree invoked child machines should support nested invoked machines 1`] = `
Array [
  Object {
    "children": Array [
      Object {
        "children": Array [],
        "component": "one",
        "props": false,
      },
    ],
    "id": "(machine)",
  },
  Object {
    "children": Array [
      Object {
        "children": Array [],
        "component": "child",
        "props": false,
      },
    ],
    "id": "child",
  },
  Object {
    "children": Array [
      Object {
        "children": Array [],
        "component": "grandchild",
        "props": false,
      },
    ],
    "id": "grandchild",
  },
]
`;
